--- a/dot_config/alacritty/private_alacritty.toml
+++ b/dot_config/alacritty/private_alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-"~/.config/alacritty/catppuccin-mocha.toml",
-]
 
 [font]
 size = 14.0
@@ -25,4 +22,9 @@ opacity = 0.95
 
 [keyboard]
 bindings = [{ key = "F11", action = "ToggleFullscreen" }]
+
+[general]
+import = [
+"~/.config/alacritty/catppuccin-mocha.toml",
+]
 
