update alacritty theme

--- a/dot_config/alacritty/catppuccin-mocha.toml
+++ b/dot_config/alacritty/catppuccin-mocha.toml
@@ -1,5 +1,5 @@
 [colors.primary]
-background = "#161622"
+background = "#1e1e2e"
 foreground = "#cdd6f4"
 dim_foreground = "#7f849c"
 bright_foreground = "#cdd6f4"
@@ -55,16 +55,6 @@ blue = "#89b4fa"
 magenta = "#f5c2e7"
 cyan = "#94e2d5"
 white = "#a6adc8"
-
-[colors.dim]
-black = "#45475a"
-red = "#f38ba8"
-green = "#a6e3a1"
-yellow = "#f9e2af"
-blue = "#89b4fa"
-magenta = "#f5c2e7"
-cyan = "#94e2d5"
-white = "#bac2de"
 
 [[colors.indexed_colors]]
 index = 16
