--- a/dot_config/alacritty/private_alacritty.toml
+++ b/dot_config/alacritty/private_alacritty.toml
@@ -1,30 +1,19 @@
 
 [font]
 size = 14.0
-
-[font.normal]
-family = "MesloLGS NF"
-style = "Regular"
-
-[font.bold]
-family = "MesloLGS NF"
-style = "Bold"
-
-[font.italic]
-family = "MesloLGS NF"
-style = "Italic"
+normal = { family = "MesloLGS NF", style = "Regular" }
+bold = { family = "MesloLGS NF", style = "Bold" }
+italic = { family = "MesloLGS NF", style = "Italic" }
 
 [env]
 TERM = "screen-256color"
 
 [window]
-opacity = 0.95
+opacity = 0.97
+padding = { x  = 0, y = 5 }
 
 [keyboard]
 bindings = [{ key = "F11", action = "ToggleFullscreen" }]
 
 [general]
-import = [
-"~/.config/alacritty/catppuccin-mocha.toml",
-]
-
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
