--- a/dot_config/kanshi/config
+++ b/dot_config/kanshi/config
@@ -4,6 +4,11 @@ profile docked {
   output "eDP-1" disable
 }
 
+profile tv {
+    output "DP-1" enable mode 3840x2160 scale 2 position 0,0
+    output "eDP-1" disable
+}
+
 profile undocked {
   output "eDP-1" enable mode 3840x2400 scale 2 position 0,0
 }
