hyprland: update alpha colors values in mocha theme to fix config error

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -18,10 +18,15 @@ $screenLock = hyprlock
 #################
 ### AUTOSTART ###
 #################
-exec-once = $screenManager
-exec-once = $terminal
-exec-once = $statusBar & hyprpaper & chromium
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = $screenManager
+exec-once = $statusBar & hyprpaper
+
+# Set up workspaces
+exec-once = handle_monitor_connect.sh
+exec-once = [workspace 1 silent] chromium
+exec-once = [workspace 2 silent] discord
+exec-once = [workspace 3 silent] $terminal
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -44,7 +49,7 @@ general {
     gaps_out = 15
     border_size = 3
     col.active_border = $mauve $lavender 45deg
-    col.inactive_border = $lavenderAlpha
+    col.inactive_border = $mauveAlpha $lavenderAlpha 45deg
     resize_on_border = false
     allow_tearing = false
 
@@ -134,7 +139,7 @@ $shiftMod = SUPER + SHIFT
 
 # System management
 bind = $shiftMod, L, exec, hyprlock
-bind = $shiftMod, S, exec, shutdown -h now
+bind = $shiftMod, S, exec, wlogout
 
 ## MAIN BINDS
 bind = $mainMod, Q, exec, $terminal
