--- a/dot_config/hypr/mocha.conf
+++ b/dot_config/hypr/mocha.conf
@@ -1,78 +1,78 @@
 
 $rosewater = rgb(f5e0dc)
-$rosewaterAlpha = f5e0dc
+$rosewaterAlpha = rgba(f5e0dc33)
 
 $flamingo = rgb(f2cdcd)
-$flamingoAlpha = f2cdcd
+$flamingoAlpha = rgba(f2cdcd33)
 
 $pink = rgb(f5c2e7)
-$pinkAlpha = f5c2e7
+$pinkAlpha = rgba(f5c2e733)
 
 $mauve = rgb(cba6f7)
-$mauveAlpha = cba6f7
+$mauveAlpha = rgba(cba6f733)
 
 $red = rgb(f38ba8)
-$redAlpha = f38ba8
+$redAlpha = rgba(f38ba833)
 
 $maroon = rgb(eba0ac)
-$maroonAlpha = eba0ac
+$maroonAlpha = rgba(eba0ac33)
 
 $peach = rgb(fab387)
-$peachAlpha = fab387
+$peachAlpha = rgba(fab38733)
 
 $yellow = rgb(f9e2af)
-$yellowAlpha = f9e2af
+$yellowAlpha = rgba(f9e2af33)
 
 $green = rgb(a6e3a1)
-$greenAlpha = a6e3a1
+$greenAlpha = rgba(a6e3a133)
 
 $teal = rgb(94e2d5)
-$tealAlpha = 94e2d5
+$tealAlpha = rgba(94e2d533)
 
 $sky = rgb(89dceb)
-$skyAlpha = 89dceb
+$skyAlpha = rgba(89dceb33)
 
 $sapphire = rgb(74c7ec)
-$sapphireAlpha = 74c7ec
+$sapphireAlpha = rgba(74c7ec33)
 
 $blue = rgb(89b4fa)
-$blueAlpha = 89b4fa
+$blueAlpha = rgba(89b4fa33)
 
 $lavender = rgb(b4befe)
-$lavenderAlpha = b4befe
+$lavenderAlpha = rgba(b4befe33)
 
 $text = rgb(cdd6f4)
-$textAlpha = cdd6f4
+$textAlpha = rgba(cdd6f433)
 
 $subtext1 = rgb(bac2de)
-$subtext1Alpha = bac2de
+$subtext1Alpha = rgba(bac2de33)
 
 $subtext0 = rgb(a6adc8)
-$subtext0Alpha = a6adc8
+$subtext0Alpha = rgba(a6adc833)
 
 $overlay2 = rgb(9399b2)
-$overlay2Alpha = 9399b2
+$overlay2Alpha = rgba(9399b233)
 
 $overlay1 = rgb(7f849c)
-$overlay1Alpha = 7f849c
+$overlay1Alpha = rgba(7f849c33)
 
 $overlay0 = rgb(6c7086)
-$overlay0Alpha = 6c7086
+$overlay0Alpha = rgba(6c708633)
 
 $surface2 = rgb(585b70)
-$surface2Alpha = 585b70
+$surface2Alpha = rgba(585b7033)
 
 $surface1 = rgb(45475a)
-$surface1Alpha = 45475a
+$surface1Alpha = rgba(45475a33)
 
 $surface0 = rgb(313244)
-$surface0Alpha = 313244
+$surface0Alpha = rgba(31324433)
 
 $base = rgb(1e1e2e)
-$baseAlpha = 1e1e2e
+$baseAlpha = rgba(1e1e2e33)
 
 $mantle = rgb(181825)
-$mantleAlpha = 181825
+$mantleAlpha = rgba(18182533)
 
 $crust = rgb(11111b)
-$crustAlpha = 11111b
+$crustAlpha = rgba(11111b33)
