--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ env = GTK_THEME,catppuccin-mocha-mauve-standard+default
 #####################
 general { 
     gaps_in = 5
-    gaps_out = 15
+    gaps_out = 10
     border_size = 3
     col.active_border = $mauve $lavender 45deg
     col.inactive_border = $mauveAlpha $lavenderAlpha 45deg
@@ -57,23 +57,23 @@ general {
 }
 
 decoration {
-    rounding = 8
-    active_opacity = 0.98
+    rounding = 12
+    active_opacity = 0.975
     inactive_opacity = 1.0
 
     shadow {
       enabled = true
       range = 4
       render_power = 3
-      color = rgba(1a1a1aee)
+      color = $mauveAlpha
       scale = 1.0
     }
 
     blur {
         enabled = true
-        size = 5
+        size = 2
         passes = 1
-        vibrancy = 0.1696
+        vibrancy = 0.005
     }
 }
 
