--- a/dot_config/kanshi/config
+++ b/dot_config/kanshi/config
@@ -9,6 +9,11 @@ profile tv {
     output "eDP-1" disable
 }
 
+profile projector {
+    output "DP-3" enable mode 1920x1080 position 0,0
+    output "eDP-1" enable mode 3840x2400 scale 2 position 1920,0
+}
+
 profile undocked {
   output "eDP-1" enable mode 3840x2400 scale 2 position 0,0
 }
