hyprland: change terminal to ghostty

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ source = $HOME/.config/hypr/mocha.conf
 $screenManager = kanshi
 $screenLock = hyprlock
 $screenTemp = hyprsunset
-$terminal = alacritty
+$terminal = ghostty
 $fileManager = nautilus
 $menu = rofi -show drun
 $statusBar = waybar
@@ -25,7 +25,7 @@ exec-once = $statusBar & hyprpaper
 # Set up workspaces
 exec-once = handle_monitor_connect.sh
 exec-once = [workspace 1 silent] chromium
-# exec-once = [workspace 2 silent] discord
+exec-once = [workspace 2 silent] discord
 exec-once = [workspace 3 silent] $terminal
 
 #############################
