zsh: add vim plugin to enable motions in shell

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ source = $HOME/.config/hypr/mocha.conf
 $screenManager = kanshi
 $screenLock = hyprlock
 $screenTemp = hyprsunset
+$screenBackground = hyprpaper
 $terminal = ghostty
 $fileManager = nautilus
 $menu = rofi -show drun
@@ -20,7 +21,8 @@ $screenLock = hyprlock
 #################
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = $screenManager
-exec-once = $statusBar & hyprpaper
+exec-once = $statusBar
+exec-once = $screenBackground
 
 # Set up workspaces
 exec-once = handle_monitor_connect.sh
@@ -31,7 +33,7 @@ exec-once = [workspace 3 silent] $terminal
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
-env = XCURSOR_SIZE,28
+env = XCURSOR_SIZE,26
 env = XCURSOR_THEME,catppuccin-mocha-peach-cursors
 env = HYPRCURSOR_THEME,catppuccin-mocha-peach-cursors
 env = HYPRCURSOR_SIZE,28
@@ -211,7 +213,7 @@ bind = , PRINT, exec, hyprshot -m output
 bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Set screen colors temperature
-bind = $mainMod, P, exec, $screenTemp -t 4000
+bind = $mainMod, P, exec, $screenTemp -t 4500
 bind = $shiftMod, P, exec, $screenTemp
 
 ##############################
