hyprland: disable qwertz setting from input

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -111,7 +111,7 @@ misc {
 #############
 input {
     kb_layout = pl, us
-    kb_variant = qwertz
+    kb_variant =
     kb_model = pc105+inet
     kb_options = terminate:ctrl_alt_bksp
 
