hyprland: fix hyprlock color issues

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -33,10 +33,10 @@ exec-once = [workspace 3 silent] $terminal
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
-env = XCURSOR_SIZE,26
+env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,catppuccin-mocha-peach-cursors
 env = HYPRCURSOR_THEME,catppuccin-mocha-peach-cursors
-env = HYPRCURSOR_SIZE,28
+env = HYPRCURSOR_SIZE,24
 env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
@@ -46,12 +46,12 @@ env = GTK_THEME,catppuccin-mocha-mauve-standard+default
 #####################
 ### LOOK AND FEEL ###
 #####################
-general { 
+general {
     gaps_in = 5
     gaps_out = 10
     border_size = 3
     col.active_border = $mauve $lavender 45deg
-    col.inactive_border = $mauveAlpha $lavenderAlpha 45deg
+    col.inactive_border = $overlay0 $overlay2 45deg
     resize_on_border = false
     allow_tearing = false
 
@@ -67,7 +67,7 @@ decoration {
       enabled = true
       range = 4
       render_power = 3
-      color = $mauveAlpha
+      color = $mauve
       scale = 1.0
     }
 
@@ -220,5 +220,5 @@ bind = $shiftMod, P, exec, $screenTemp
 ### WINDOWS AND WORKSPACES ###
 ##############################
 # Example windowrule v2
-windowrulev2 = float,class:^(alacritty)$,title:^(alacritty)$
+windowrulev2 = float,class:^(ghostty)$,title:^(ghostty)$
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
