--- a/dot_config/hypr/mocha.conf
+++ b/dot_config/hypr/mocha.conf
@@ -1,78 +1,78 @@
 
 $rosewater = rgb(f5e0dc)
-$rosewaterAlpha = rgba(f5e0dc33)
+$rosewaterAlpha = f5e0dc
 
 $flamingo = rgb(f2cdcd)
-$flamingoAlpha = rgba(f2cdcd33)
+$flamingoAlpha = f2cdcd
 
 $pink = rgb(f5c2e7)
-$pinkAlpha = rgba(f5c2e733)
+$pinkAlpha = f5c2e7
 
 $mauve = rgb(cba6f7)
-$mauveAlpha = rgba(cba6f733)
+$mauveAlpha = cba6f7
 
 $red = rgb(f38ba8)
-$redAlpha = rgba(f38ba833)
+$redAlpha = f38ba8
 
 $maroon = rgb(eba0ac)
-$maroonAlpha = rgba(eba0ac33)
+$maroonAlpha = eba0ac
 
 $peach = rgb(fab387)
-$peachAlpha = rgba(fab38733)
+$peachAlpha = fab387
 
 $yellow = rgb(f9e2af)
-$yellowAlpha = rgba(f9e2af33)
+$yellowAlpha = f9e2af
 
 $green = rgb(a6e3a1)
-$greenAlpha = rgba(a6e3a133)
+$greenAlpha = a6e3a1
 
 $teal = rgb(94e2d5)
-$tealAlpha = rgba(94e2d533)
+$tealAlpha = 94e2d5
 
 $sky = rgb(89dceb)
-$skyAlpha = rgba(89dceb33)
+$skyAlpha = 89dceb
 
 $sapphire = rgb(74c7ec)
-$sapphireAlpha = rgba(74c7ec33)
+$sapphireAlpha = 74c7ec
 
 $blue = rgb(89b4fa)
-$blueAlpha = rgba(89b4fa33)
+$blueAlpha = 89b4fa
 
 $lavender = rgb(b4befe)
-$lavenderAlpha = rgba(b4befe33)
+$lavenderAlpha = b4befe
 
 $text = rgb(cdd6f4)
-$textAlpha = rgba(cdd6f433)
+$textAlpha = cdd6f4
 
 $subtext1 = rgb(bac2de)
-$subtext1Alpha = rgba(bac2de33)
+$subtext1Alpha = bac2de
 
 $subtext0 = rgb(a6adc8)
-$subtext0Alpha = rgba(a6adc833)
+$subtext0Alpha = a6adc8
 
 $overlay2 = rgb(9399b2)
-$overlay2Alpha = rgba(9399b233)
+$overlay2Alpha = 9399b2
 
 $overlay1 = rgb(7f849c)
-$overlay1Alpha = rgba(7f849c33)
+$overlay1Alpha = 7f849c
 
 $overlay0 = rgb(6c7086)
-$overlay0Alpha = rgba(6c708633)
+$overlay0Alpha = 6c7086
 
 $surface2 = rgb(585b70)
-$surface2Alpha = rgba(585b7033)
+$surface2Alpha = 585b70
 
 $surface1 = rgb(45475a)
-$surface1Alpha = rgba(45475a33)
+$surface1Alpha = 45475a
 
 $surface0 = rgb(313244)
-$surface0Alpha = rgba(31324433)
+$surface0Alpha = 313244
 
 $base = rgb(1e1e2e)
-$baseAlpha = rgba(1e1e2e33)
+$baseAlpha = 1e1e2e
 
 $mantle = rgb(181825)
-$mantleAlpha = rgba(18182533)
+$mantleAlpha = 181825
 
 $crust = rgb(11111b)
-$crustAlpha = rgba(11111b33)
+$crustAlpha = 11111b
