--- a/dot_config/kanshi/config
+++ b/dot_config/kanshi/config
@@ -1,6 +1,5 @@
 profile docked {
-  output "DP-1" enable mode 1920x1080@144 position -1080,0 transform 90
-  output "DP-3" enable mode 1920x1080@74.97 position 0,0 
+  output "DP-1" enable mode 3840x2560@60 scale 2 position 0,0
   output "eDP-1" disable
 }
 
