--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -16,13 +16,15 @@ set-option -g status-position top
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 
+# enable clipboard
+set -g set-clipboard on
+
 # True color settings
 set -g default-terminal "screen-256color"
 set-option -sa terminal-features ",screen-256color:RGB"
 
 set-option -sg escape-time 10
 set-option -g focus-events on
-
 
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
