--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -1,11 +1,42 @@
 {
+  "layer": "top",
   "position": "top",
-  "modules-left": ["custom/arch", "hyprland/workspaces"],
-  "modules-center": ["hyprland/window"],
-  "modules-right": ["network", "pulseaudio", "battery", "clock", "custom/power"],
-  "clock": {
-    "format": "<span foreground='#f5c2e7'>  </span>{:%a %d %H:%M}",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
+  "modules-left": ["custom/arch",  "hyprland/workspaces"],
+  "modules-center": ["clock"],
+  "modules-right": [
+    "cpu",
+    "memory",
+    "network",
+    "pulseaudio",
+    "backlight",
+    "battery",
+    "tray",
+    "custom/lock",
+    "custom/power"
+  ],
+  "custom/arch": {
+    "format": " 󰣇 ",
+    "tooltip": false
+  },
+  "hyprland/workspaces": {
+    "format": "{name}: {icon}",
+    "format-icons": {
+      "active": "",
+      "default": ""
+    }
+  },
+  "tray": {
+    "icon-size": 16,
+    "spacing": 10
+  },
+  "custom/music": {
+    "format": "  {}",
+    "escape": true,
+    "interval": 5,
+    "tooltip": false,
+    "exec": "playerctl metadata --format='{{ artist }} - {{ title }}'",
+    "on-click": "playerctl play-pause",
+    "max-length": 50
   },
   "battery": {
     "states": {
@@ -22,29 +53,45 @@
     "format-icons": ["", "", "", "", ""],
     "tooltip-format": "{time}"
   },
+  "clock": {
+    "timezone": "Europe/London",
+    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+    "format": "  {:%H:%M:%S}",
+    "interval": 1
+  },
   "network": {
-    "format-wifi": "<span size='13000' foreground='#f5e0dc'> </span>{essid}",
-    "format-ethernet": "<span size='13000' foreground='#f5e0dc'>󰤭  </span> Disconnected",
-    "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": "<span size='13000' foreground='#f5e0dc'>  </span>Disconnected",
+    "format-wifi": "󰤢 {bandwidthDownBits}",
+    "format-ethernet": "󰈀 {bandwidthDownBits}",
+    "format-disconnected": "󰤠 No Network",
     "tooltip-format-wifi": "Signal Strenght: {signalStrength}%",
-    "on-click": "nm-connection-editor"
+    "on-click": "nm-connection-editor",
+    "interval": 5
+  },
+  "cpu": {
+    "interval": 1,
+    "format": "  {icon0}{icon1}{icon2}{icon3} {usage:>2}%",
+    "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
+  },
+  "memory": {
+    "interval": 30,
+    "format": "󰍛 {used:0.1f}G/{total:0.1f}G"
   },
   "pulseaudio": {
-      "format": "{icon}  {volume}%",
-      "format-muted": "",
-      "format-icons": {
-          "default": ["", "", " "]
-      },
-      "on-click": "pavucontrol"
+    "format": "{icon} {volume}%",
+    "format-muted": " ",
+    "format-icons": {
+      "default": ["", "", " "]
+    },
+    "on-click": "pavucontrol"
   },
-  "custom/arch": {
-    "format": " 󰣇 ",
-    "tooltip": false
+  "custom/lock": {
+    "tooltip": false,
+    "on-click": "hyprlock",
+    "format": "   "
   },
   "custom/power": {
-      "format": " ⏻ ",
-      "tooltip": false,
-      "on-click": "wlogout --protocol layer-shell"
+    "tooltip": false,
+    "on-click": "wlogout &",
+    "format": "⏻ "
   }
 }
