hyprland: update hyprlock wallpaper

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -14,7 +14,6 @@ $terminal = ghostty
 $fileManager = nautilus
 $menu = rofi -show drun
 $statusBar = waybar
-$screenLock = hyprlock
 
 #################
 ### AUTOSTART ###
@@ -140,7 +139,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 $shiftMod = SUPER + SHIFT
 
 # System management
-bind = $shiftMod, L, exec, hyprlock
+bind = $shiftMod, L, exec, $screenLock
 bind = $shiftMod, S, exec, wlogout
 
 ## MAIN BINDS
