--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -70,11 +70,20 @@ decoration {
       scale = 1.0
     }
 
+    # blur {
+    #     enabled = true
+    #     size = 2
+    #     passes = 1
+    #     vibrancy = 0.005
+    # }
     blur {
         enabled = true
-        size = 2
-        passes = 1
-        vibrancy = 0.005
+        size = 6
+        ignore_opacity = true
+        passes = 3
+        noise = 0.01
+
+        vibrancy = 0.1696
     }
 }
 
