--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -12,7 +12,7 @@ $screenTemp = hyprsunset
 $screenBackground = hyprpaper
 $terminal = ghostty
 $fileManager = nautilus
-$menu = rofi -show drun
+$menu = ~/.config/rofi/scripts/launcher_t2
 $statusBar = waybar
 
 #################
@@ -25,7 +25,7 @@ exec-once = $screenBackground
 
 # Set up workspaces
 exec-once = handle_monitor_connect.sh
-exec-once = [workspace 1 silent] chromium
+exec-once = [workspace 1 silent] brave
 exec-once = [workspace 2 silent] discord
 exec-once = [workspace 3 silent] $terminal
 
@@ -70,12 +70,6 @@ decoration {
       scale = 1.0
     }
 
-    # blur {
-    #     enabled = true
-    #     size = 2
-    #     passes = 1
-    #     vibrancy = 0.005
-    # }
     blur {
         enabled = true
         size = 6
