rofi: web search mode

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -13,6 +13,7 @@ $screenBackground = hyprpaper
 $terminal = ghostty
 $fileManager = nautilus
 $menu = ~/.config/rofi/scripts/launcher_t2
+$webSearch = ~/.config/rofi/scripts/web_search
 $statusBar = waybar
 
 #################
@@ -152,6 +153,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, W, exec, $webSearch
 bind = $mainMod, T, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
