--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -27,8 +27,8 @@ exec-once = $screenBackground
 # Set up workspaces
 exec-once = handle_monitor_connect.sh
 exec-once = [workspace 1 silent] brave
-exec-once = [workspace 2 silent] discord
-exec-once = [workspace 3 silent] $terminal
+exec-once = [workspace 2 silent] $terminal
+exec-once = [workspace 3 silent] spotify
 
 #############################
 ### ENVIRONMENT VARIABLES ###
