--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -15,6 +15,7 @@ $fileManager = nautilus
 $menu = ~/.config/rofi/scripts/launcher_t2
 $webSearch = ~/.config/rofi/scripts/web_search
 $statusBar = waybar
+$musicPlayer = spotify --uri=%u --enable-features=UseOzonePlatform --ozone-platform=wayland
 
 #################
 ### AUTOSTART ###
@@ -28,7 +29,7 @@ exec-once = $screenBackground
 exec-once = handle_monitor_connect.sh
 exec-once = [workspace 1 silent] brave
 exec-once = [workspace 2 silent] $terminal
-exec-once = [workspace 3 silent] spotify
+exec-once = [workspace 3 silent] $musicPlayer
 
 #############################
 ### ENVIRONMENT VARIABLES ###
