lazyvim: exclude lazyvim.json from dot_files

--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,21 +1,12 @@
 theme = catppuccin-mocha
-background-opacity = 0.9
-
+#background-opacity = 0.95
 gtk-titlebar = false
 
-#font-family = MesloLGS NF
-#font-family-bold = MesloLGS NF Bold
-#font-family-italic = MesloLGS NF Italic
-#font-family-bold-italic = MesloLGS NF Bold Italic
-
+font-family = JetBrainsMono Nerd Font
 font-size = 13
-# font-style = Regular
-
 cursor-style = block
 cursor-style-blink = false
 cursor-color = #f5e0dc
-
-# adjust-cell-width = -2%
 
 shell-integration = zsh
 shell-integration-features = no-sudo,no-cursor,no-title
