--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -24,6 +24,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once = $screenManager
 exec-once = $statusBar
 exec-once = $screenBackground
+exec-once = hypridle
 
 # Set up workspaces
 exec-once = handle_monitor_connect.sh
@@ -50,7 +51,7 @@ env = GTK_THEME,catppuccin-mocha-mauve-standard+default
 general {
     gaps_in = 5
     gaps_out = 10
-    border_size = 3
+    border_size = 2
     col.active_border = $mauve $lavender 45deg
     col.inactive_border = $overlay0 $overlay2 45deg
     resize_on_border = false
@@ -61,7 +62,7 @@ general {
 
 decoration {
     rounding = 12
-    active_opacity = 0.975
+    active_opacity = 0.95
     inactive_opacity = 1.0
 
     shadow {
@@ -74,10 +75,10 @@ decoration {
 
     blur {
         enabled = true
-        size = 6
+        size = 7
         ignore_opacity = true
         passes = 3
-        noise = 0.01
+        noise = 0.02
 
         vibrancy = 0.1696
     }
@@ -105,7 +106,7 @@ master {
     new_status = true
 }
 
-misc { 
+misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = false
 }
@@ -117,7 +118,7 @@ input {
     kb_layout = pl, us
     kb_variant =
     kb_model = pc105+inet
-    kb_options = terminate:ctrl_alt_bksp
+    kb_options = terminate:ctrl_alt_bksp,caps:escape
 
     follow_mouse = 1
     sensitivity = 0
@@ -127,9 +128,9 @@ input {
     }
 }
 
-gestures {
-    workspace_swipe = true
-}
+# gestures {
+#     workspace_swipe = true
+# }
 
 device {
     name = epic-mouse-v1
