--- a/dot_config/hypr/hypridle.conf
+++ b/dot_config/hypr/hypridle.conf
@@ -4,31 +4,35 @@ general {
     after_sleep_cmd = hyprctl dispatch dpms on  # to avoid having to press a key twice to turn on the display.
 }
 
+# screen dimming
 listener {
-    timeout = 15                                # 2.5min.
-    on-timeout = brightnessctl -s set 10         # set monitor backlight to minimum, avoid 0 on OLED monitor.
-    on-resume = brightnessctl -r                 # monitor backlight restore.
+    timeout = 300 # 5min
+    on-timeout = notify-send "Dimming screen brightness" && brightnessctl -s set 10
+    on-resume = notify-send "Restoring screen brightness" && brightnessctl -r
 }
 
-# turn off keyboard backlight, comment out this section if you dont have a keyboard backlight.
+# keyboard backlight
 listener {
-    timeout = 150                                          # 2.5min.
-    on-timeout = brightnessctl -sd rgb:kbd_backlight set 0 # turn off keyboard backlight.
-    on-resume = brightnessctl -rd rgb:kbd_backlight        # turn on keyboard backlight.
+    timeout = 300 # 5min
+    on-timeout = notify-send "Turning off keyboard backlight" && brightnessctl -sd rgb:kbd_backlight set 0
+    on-resume = notify-send "Restoring keyboard backlight" && brightnessctl -rd rgb:kbd_backlight
 }
 
+# screen lock after inactivity
 listener {
-    timeout = 300                                 # 5min
-    on-timeout = loginctl lock-session            # lock screen when timeout has passed
+    timeout = 600 # 10min
+    on-timeout = notify-send "Locking screen in 5 seconds..." && sleep 5 && loginctl lock-session
 }
 
+# screen off after inactivity
 listener {
-    timeout = 330                                                     # 5.5min
-    on-timeout = hyprctl dispatch dpms off                            # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on && brightnessctl -r          # screen on when activity is detected after timeout has fired.
+    timeout = 900 # 15min
+    on-timeout = notify-send "Turning off display" && hyprctl dispatch dpms off
+    on-resume = notify-send "Display back on" && hyprctl dispatch dpms on && brightnessctl -r
 }
 
+# suspend pc
 listener {
-    timeout = 1800                                # 30min
-    on-timeout = systemctl suspend                # suspend pc
+    timeout = 1200 # 20min
+    on-timeout = notify-send "Suspending system in 10 seconds..." && sleep 10 && systemctl suspend
 }
