--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -2,7 +2,6 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set -g prefix C-s
-
 set -g mouse on
 
 bind-key h select-pane -L
@@ -10,40 +9,38 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+# True color settings
+set -g default-terminal "screen-256color"
+set-option -sa terminal-features ",screen-256color:RGB"
+set-option -sg escape-time 10
+set-option -g focus-events on
 set-option -g status-position top
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @catppuccin_flavour 'mocha'
 
-# enable clipboard
+# Enable clipboard
 set -g set-clipboard on
 
-# True color settings
-set -g default-terminal "screen-256color"
-set-option -sa terminal-features ",screen-256color:RGB"
+# run catppuccin
+run ~/.tmux/plugins/tmux/catppuccin.tmux
 
-set-option -sg escape-time 10
-set-option -g focus-events on
+# Set catppuccin colors
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_status_background "#242638"
+set -g @catppuccin_window_current_text " #{b:pane_current_path}"
+set -g @catppuccin_window_text " #{b:pane_current_path}"
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "directory user session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
