--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -43,7 +43,7 @@ env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
-env = GTK_THEME,catppuccin-mocha-mauve-standard+default
+env = GTK_THEME,Catppuccin-Mocha-Mauve-Standard+Default
 
 #####################
 ### LOOK AND FEEL ###
@@ -228,3 +228,10 @@ bind = $shiftMod, P, exec, $screenTemp
 # Example windowrule v2
 windowrulev2 = float,class:^(ghostty)$,title:^(ghostty)$
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+
+##############################
+###        Plugins         ###
+##############################
+
+# allow hyprpm to load plugins
+permission = /usr/(bin|local/bin)/hyprpm, plugin, allow
