--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -1,19 +1,27 @@
 {
   "layer": "top",
   "position": "top",
+  "spacing": 0,
+  // "height": 26,
   "modules-left": ["custom/arch",  "hyprland/workspaces"],
   "modules-center": ["clock"],
   "modules-right": [
-    "cpu",
-    "memory",
-    "network",
-    "pulseaudio",
-    "backlight",
-    "battery",
+    "group/system",
+    "group/media",
     "tray",
     "custom/lock",
     "custom/power"
   ],
+  "group/system": {
+    "orientation": "horizontal",
+    "modules": ["cpu", "memory", "network"],
+    "padding": 16
+  },
+  "group/media": {
+    "orientation": "horizontal",
+    "modules": ["pulseaudio", "battery", "bluetooth"],
+    "padding": 16
+  },
   "custom/arch": {
     "format": " 󰣇 ",
     "tooltip": false
@@ -26,8 +34,8 @@
     }
   },
   "tray": {
-    "icon-size": 16,
-    "spacing": 10
+    "icon-size": 12,
+    "spacing": 17
   },
   "custom/music": {
     "format": "  {}",
@@ -38,24 +46,9 @@
     "on-click": "playerctl play-pause",
     "max-length": 50
   },
-  "battery": {
-    "states": {
-      "warning": 30,
-      "critical": 15
-    },
-    "format": "<span size='13000' foreground='#a6e3a1'>{icon} </span> {capacity}%",
-    "format-warning": "<span size='13000' foreground='#B1E3AD'>{icon} </span> {capacity}%",
-    "format-critical": "<span size='13000' foreground='#E38C8F'>{icon} </span> {capacity}%",
-    "format-charging": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-plugged": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-alt": "<span size='13000' foreground='#B1E3AD'>{icon} </span> {time}",
-    "format-full": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
-    "format-icons": ["", "", "", "", ""],
-    "tooltip-format": "{time}"
-  },
   "clock": {
     "timezone": "Europe/London",
-    "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+    "tooltip-format": "󰸗  <big>{:%A, %d %B %Y}</big>",
     "format": "  {:%H:%M:%S}",
     "interval": 1
   },
@@ -65,16 +58,24 @@
     "format-disconnected": "󰤠 No Network",
     "tooltip-format-wifi": "Signal Strenght: {signalStrength}%",
     "on-click": "nm-connection-editor",
-    "interval": 5
+    "interval": 10
+  },
+  "bluetooth": {
+    "format": "󰂯",
+    "format-disabled": "󰂲",
+    "format-connected": "󰂯",
+    "tooltip-format": "Devices connected: {num_connections}",
+    "on-click": "blueman-manager"
   },
   "cpu": {
-    "interval": 1,
+    "interval": 5,
     "format": "  {icon0}{icon1}{icon2}{icon3} {usage:>2}%",
-    "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
+    "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"],
+    "on-click": "ghostty -e btop"
   },
   "memory": {
     "interval": 30,
-    "format": "󰍛 {used:0.1f}G/{total:0.1f}G"
+    "format": "󰘚 {used:0.1f}G/{total:0.1f}G"
   },
   "pulseaudio": {
     "format": "{icon} {volume}%",
@@ -83,6 +84,21 @@
       "default": ["", "", " "]
     },
     "on-click": "pavucontrol"
+  },
+  "battery": {
+    "states": {
+      "warning": 30,
+      "critical": 15
+    },
+    "format": "<span size='11000' foreground='#a6e3a1'>{icon} </span> {capacity}%",
+    "format-warning": "<span size='11000' foreground='#B1E3AD'>{icon} </span> {capacity}%",
+    "format-critical": "<span size='11000' foreground='#E38C8F'>{icon} </span> {capacity}%",
+    "format-charging": "<span size='11000' foreground='#B1E3AD'> </span>{capacity}%",
+    "format-plugged": "<span size='11000' foreground='#B1E3AD'> </span>{capacity}%",
+    "format-alt": "<span size='11000' foreground='#B1E3AD'>{icon} </span> {time}",
+    "format-full": "<span size='11000' foreground='#B1E3AD'> </span>{capacity}%",
+    "format-icons": ["", "", "", "", ""],
+    "tooltip-format": "{time}"
   },
   "custom/lock": {
     "tooltip": false,
