--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -1,26 +1,31 @@
 {
   "layer": "top",
   "position": "top",
-  "spacing": 0,
-  // "height": 26,
-  "modules-left": ["custom/arch",  "hyprland/workspaces"],
+  "spacing": 14,
+  "height": 36,
+  "modules-left": ["custom/arch", "hyprland/workspaces", "custom/k8s", "custom/music"],
   "modules-center": ["clock"],
   "modules-right": [
     "group/system",
     "group/media",
-    "tray",
+    // "tray",
     "custom/lock",
     "custom/power"
   ],
   "group/system": {
     "orientation": "horizontal",
     "modules": ["cpu", "memory", "network"],
-    "padding": 16
+    "padding": 32
   },
   "group/media": {
     "orientation": "horizontal",
-    "modules": ["pulseaudio", "battery", "bluetooth"],
-    "padding": 16
+    "modules": ["bluetooth", "pulseaudio", "battery"],
+    "padding": 32
+  },
+  "custom/k8s": {
+    "exec": "/home/dave/scripts/k8s_status.sh",
+    "interval": 30,
+    "return-type": "json"
   },
   "custom/arch": {
     "format": " 󰣇 ",
@@ -42,9 +47,9 @@
     "escape": true,
     "interval": 5,
     "tooltip": false,
-    "exec": "playerctl metadata --format='{{ artist }} - {{ title }}'",
-    "on-click": "playerctl play-pause",
-    "max-length": 50
+    "exec": "playerctl --player=spotify metadata --format '{{ artist }} - {{ title }}' || echo '  Stopped'",
+    "on-click": "playerctl --player=spotify play-pause",
+    "max-length": 40
   },
   "clock": {
     "timezone": "Europe/London",
@@ -53,17 +58,17 @@
     "interval": 1
   },
   "network": {
-    "format-wifi": "󰤢 {bandwidthDownBits}",
+    "format-wifi": "󰤢  {bandwidthDownBits}",
     "format-ethernet": "󰈀 {bandwidthDownBits}",
-    "format-disconnected": "󰤠 No Network",
+    "format-disconnected": "󰤠  No Network",
     "tooltip-format-wifi": "Signal Strenght: {signalStrength}%",
     "on-click": "nm-connection-editor",
     "interval": 10
   },
   "bluetooth": {
     "format": "󰂯",
-    "format-disabled": "󰂲",
-    "format-connected": "󰂯",
+    "format-disabled": "󰂲 ",
+    "format-connected": "󰂯 ",
     "tooltip-format": "Devices connected: {num_connections}",
     "on-click": "blueman-manager"
   },
@@ -75,11 +80,12 @@
   },
   "memory": {
     "interval": 30,
-    "format": "󰘚 {used:0.1f}G/{total:0.1f}G"
+    "format": "󰘚 {used:0.1f}G/{total:0.1f}G",
+    "on-click": "ghostty -e btop"
   },
   "pulseaudio": {
     "format": "{icon} {volume}%",
-    "format-muted": " ",
+    "format-muted": "  ",
     "format-icons": {
       "default": ["", "", " "]
     },
