--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -11,9 +11,9 @@ $screenLock = hyprlock
 $screenTemp = hyprsunset
 $screenBackground = hyprpaper
 $terminal = ghostty
-$fileManager = nautilus
 $menu = ~/.config/rofi/scripts/launcher_t2
 $webSearch = ~/.config/rofi/scripts/web_search
+$fileManager = thunar
 $statusBar = waybar
 $musicPlayer = spotify --uri=%u --enable-features=UseOzonePlatform --ozone-platform=wayland
 
@@ -21,6 +21,8 @@ $musicPlayer = spotify --uri=%u --enable-features=UseOzonePlatform --ozone-platf
 ### AUTOSTART ###
 #################
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = blueman-applet &
 exec-once = $screenManager
 exec-once = $statusBar
 exec-once = $screenBackground
@@ -43,7 +45,7 @@ env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
-env = GTK_THEME,Catppuccin-Mocha-Mauve-Standard+Default
+env = GTK_THEME,catppuccin-mocha-mauve-standard+default
 
 #####################
 ### LOOK AND FEEL ###
@@ -109,6 +111,7 @@ master {
 misc {
     force_default_wallpaper = 0
     disable_hyprland_logo = false
+    font_family = "JetBrainsMono Nerd Font, Noto Color Emoji"
 }
 
 #############
@@ -220,7 +223,7 @@ bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Set screen colors temperature
 bind = $mainMod, P, exec, $screenTemp -t 4500
-bind = $shiftMod, P, exec, $screenTemp
+bind = $shiftMod, P, exec, $screenTemp -t 9000
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
